updated photos for about us, reformated contact us, ins, rx page, updated daily log included a hbp calculator

--- a/about-us.html
+++ b/about-us.html
@@ -27,19 +27,20 @@
 <body>
     <h1>
         <p class="title">About Us</p>
+        <hr>
         <div class="row">
           <div class="column">
-            <img class="Scott-image" src="images/Medicine-bro.png">
+            <img class="Scott-image" src="images/IMG_1051.jpeg">
             <p class="Scott">Scott Atkinson</p>
                 <p class="Scott-intro">
-                    Scott is a current pre-med student at Keck Graduate Instutite. As an aspiring physician, he hopes to make a positive impact on the world while encouraging his patients to live healthy lives. 
+                    Scott is a current pre-med student at Keck Graduate Instutite.<br>As an aspiring physician, he hopes to make a positive impact<br>on the world while encouraging his patients to live healthy lives. 
                 </p>
             </div>
           <div class="column">
-            <img class="Joann-image" src="images/Doctor-pana.png">
+            <img class="Joann-image" src="images/IMG_4456.jpeg">
             <p class="Joann">Joann Sy</p>
                 <p class="Joann-intro">
-                    Joann is a current pre-med student at Keck Graduate Institute. As an aspiring physician, she hopes improve accessibility to healthcare for all while creating an inclusive space for affirmative care.
+                    Joann is a current pre-med student at Keck Graduate Institute.<br>As an aspiring physician, she hopes improve accessibility to healthcare<br>for all while creating an inclusive space for affirmative care.
                 </p>
          </div> 
         </div> 
