--- a/medical-history.html
+++ b/medical-history.html
@@ -33,12 +33,63 @@
     </div> 
   </div>
 </nav>
-
+<hr>
 <!-- Body and Image -->
 <body>
     <h1>
       <p class="title">Medical History</p>
     </h1>
+    <h3>
+      <p class="hx-title" style="margin-left:25px;">My Information</p></span>
+    </h3>
+    <div class="hx-form" style="margin-left:50px;">
+      <form>
+        <label for="fname">First name:</label>
+        <input type="text" id="fname" name="fname">
+        <label for="mname">Middle name:</label>
+        <input type="text" id="mname" name="mname">
+        <label for="lname">Last name:</label>
+        <input type="text" id="lname" name="lname"><br>
+        <label for="birth-sex">Birth Sex:</label>
+          <select id="birth-sex" required>
+            <option value="NA">--</option>
+            <option value="female">Female</option>
+            <option value="intersex">Intersex</option>
+            <option value="male">Male</option>
+          </select>
+        <label for="birthday">Birthday:</label>
+        <input type="date" id="birthday" name="birthday" ><br>
+        <label for="age">Age:</label>
+        <input type="number" id="age" name="age" ><br>
+        <label for="gender-identity">Gender Identity:</label>
+        <input type="text" id="gender-identity" name="gender-identity">
+        <label for="pronouns">Pronouns:</label>
+        <input type="text" id="pronouns" name="pronouns"><br>
+      </form>
+    </div>
+    <hr>
+    <div style="margin-left:25px;">
+    <h3>
+      <p class="hx-title">My History</p></span>
+    </h3>
+    </div>
+    <div style="margin-left:50px;">
+      <input type="radio" id="medHx" name="med-hx">
+      <label for="hbp">Hypertension:</label><br>
+      <input type="radio" id="medHx" name="med-hx">
+      <label for="lbp">Hypotension:</label><br>
+      <input type="radio" id="medHx" name="med-hx">
+      <label for="hbp">Glaucoma:</label><br>
+      <input type="radio" id="medHx" name="med-hx">
+      <input type="text" id="mname" name="mname"><br>
+      <input type="radio" id="medHx" name="med-hx">
+      <input type="text" id="mname" name="mname">
+    </div>
+    <div class="myDemo-button">
+      <button onclick="myDemo()">Save</button>
+      <p id="myDemo-save"></p>
+      </div>
+
 </body>
 <!-- // Body and Image -->
 
