--- a/overview.html
+++ b/overview.html
@@ -40,19 +40,20 @@
     <p class="title">Overview</p>
   </h1>
   <div class="grid">
-    <div><img src="images/Schedule-amico.png" alt=""><a href="appointments.html">Appointments</a></div>
-    <div><img src="images/About me-rafiki.png" alt=""><a href="demographics.html">Demographics</a></div>
-    <div><img src="images/Personal files-rafiki.png" alt=""><a href="medical-history.html">Medical History</a></div>
-    <div><img src="images/Pharmacist-bro.png" alt="Image of female pharmacist at the counter"><a href="prescriptions.html">Prescriptions</a></div>
-    <div><img src="images/Novelist writing-amico.png" alt=""><a href="daily-log.html">Daily Log</a></div>
-    <div><img src="images/Health professional team-amico.png" alt=""><a href="providers.html">Providers</a></div>
-    <div><img src="images/Insurance-pana.png" alt=""><a href="insurance.html">Insurance</a></div>
-    <div><img src="images/Personal files-amico.png" alt=""><a href="reports.html">Reports</a></div>
+    <div><img src="images/Schedule-amico.png" alt="" ><a href="appointments.html"  style="font-size: 24px; text-align: center;">Appointments</a></div>
+    <div><img src="images/About me-rafiki.png" alt=""><a href="demographics.html" style="font-size: 24px; text-align: center;">Demographics</a></div>
+    <div><img src="images/Personal files-rafiki.png" alt=""><a href="medical-history.html" style="font-size: 24px; text-align: center;">Medical History</a></div>
+    <div><img src="images/Pharmacist-bro.png" alt="Image of female pharmacist at the counter"><a href="prescriptions.html" style="font-size: 24px; text-align: center;">Prescriptions</a></div>
+    <div><img src="images/Novelist writing-amico.png" alt=""><a href="daily-log.html" style="font-size: 24px; text-align: center;">Daily Log</a></div>
+    <div><img src="images/Health professional team-amico.png" alt=""><a href="providers.html" style="font-size: 24px; text-align: center;">Providers</a></div>
+    <div><img src="images/Insurance-pana.png" alt=""><a href="insurance.html" style="font-size: 24px; text-align: center;">Insurance</a></div>
+    <div><img src="images/Personal files-amico.png" alt=""><a href="reports.html" style="font-size: 24px; text-align: center;">Reports</a></div>
   </div> 
 </body>
   <!-- //Body and grid -->
-
-  <!-- footer -->
+  <br>
+  <br>
+    <!-- footer -->
 <div class="footer">
     <div class="footer-bottom">
       &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
