--- a/reports.html
+++ b/reports.html
@@ -60,14 +60,13 @@
     </div>
 </body>
 <!-- // Body and Image -->
-
 <br><br>
 <!-- footer -->
 <div class="footer">
-    <div class="footer-bottom"></div>
-      &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
+    <div class="footer-bottom">
+      &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy
     </div>
   </div>
   <!-- // footer -->
 
-<script type="text/javascript" src="src/scripts.js"></script>  
+<script type="text/javascript" src="src/scripts.js"></script>
