--- a/insurance.html
+++ b/insurance.html
@@ -43,6 +43,11 @@
     <div class="insurance-upload">
       <p class="text-insurance">Upload your insurance card here!</p><br>
       <form action="/insurance_cards.php">
+        <label for="ins-card">Insurance Company:</label>
+        <input type="text" id="ins-card" name="ins-card"><br><br>
+        <input type="file" id="myFile" name="filename"><br>
+        <label for="ins-card">Insurance Company:</label>
+        <input type="text" id="ins-card" name="ins-card"><br><br>
         <input type="file" id="myFile" name="filename"><br>
         <button type="button" onclick="showIns()">Submit</button>
       </form>
@@ -51,14 +56,18 @@
   <div id="container-ins" class= "container-ins">
     <div class="row-ins">
       <div class="column-ins-1">
+        <div class="ins-content">
         <p>Medicare Insurance Card</p>
         <img class="insurance-upload-complete" src="images/Medicare_card_new.jpg">
       </div>
+      </div>
     </div>
       <div class="column-ins-2">
+        <div class="ins-content">
         <p>Medi-Cal Insurance Card</p>
         <img class="insurance-upload-complete" src="images/24737_02_newBIC_web.png">
-      </div>
+        </div>
+      </div>  
   </div>
 </body>
 <!-- // Body and Image --> 
